--- a/input-form.html
+++ b/input-form.html
@@ -15,6 +15,16 @@
       .element:hover {
         background-position: -100% 0; /* Shift background on hover */
       }
+
+
+      .custom_btn{
+        background: linear-gradient(to right #fff 50%, #cec 50%);
+        background-size: 100% 200%;
+        background-position: 0 0;
+      }
+      .custom_btn:hover{
+        background-position: -100% 0;
+      }
     </style>
   </head>
   <body>
